@@ -1,4 +1,9 @@
 Changes with APR a9
+  *) Make APR's shared memory routines always allocate enough memory
+     for the requested segment, the MM internal types, and the APR
+     internal types.
+     [Ryan Bloom]
+
   *) Add APR_SIZE_T_FMT.  Get the other APR_xx_T_FMT variables
      defined properly on AIX.  [Jeff Trawick]
 
